minijinja/tests/snapshots/test_templates__vm@err_strict_undefined_for.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% for item in undefined_value %}\n    ...\n{% endfor %}"
info:
  $settings:
    undefined: strict
input_file: minijinja/tests/inputs/err_strict_undefined_for.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    name: "err_strict_undefined_for.txt",
    line: 1,
}

undefined value (in err_strict_undefined_for.txt:1)
------------------------ err_strict_undefined_for.txt -------------------------
   1 > {% for item in undefined_value %}
     i                ^^^^^^^^^^^^^^^ undefined value
   2 |     ...
   3 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
